...
            key: Key('new_estimate_button'),
            icon: Icon(Icons.calculate_outlined),
            selectedIcon: Icon(Icons.calculate),
            label: 'Estimate',
          ),
        1 => NavigationDestination(
            key: const Key('projects_nav_tab'),
            icon: Semantics(
              label: [
                if (pendingDeletions > 0)
                  '$pendingDeletions pending deletion request${pendingDeletions == 1 ? '' : 's'}',
                if (unreadChats > 0)
                  '$unreadChats unread chat message${unreadChats == 1 ? '' : 's'}',
...
